# information-compressor

./: .gitignore  CMakeLists.txt  README.md  lorem_de  main  main.cc  test
data/: lorem  loremBig  lowEntropy
src/: bitarray.cc  bitarray.h  encoding.cc  encoding.h  huffman.cc  huffman.h  main.cc
